[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
# use optimized risc0 circuit
revm = { git = "https://github.com/johntaiko/revm", branch = "feat/taiko" }
revm-primitives = { git = "https://github.com/johntaiko/revm", branch = "feat/taiko" }


[dependencies]
zeth-lib = {  git = "https://github.com/CeciliaZ030/zeth.git", branch= "powdr", package =  "zeth-lib", features = ["taiko"]}

revm = { version = "3.5", default-features = false, features = [
    "std",
    "serde",
    "taiko",
    "optional_no_base_fee",
    "optional_balance_check",
] }

runtime = { path = "../../powdr/riscv/runtime" }
models = { path = "../models" }

serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[workspace]
